--- a/style/shapes.css
+++ b/style/shapes.css
@@ -5,27 +5,24 @@
 /* Battery */
 
 .battery {
-    background-color: azure;
-    border: 0.1em solid black;
-    border-radius: 0.2em 0.2em 0.2em 0.2em;
-    height: 1em;
     position: relative;
     width: 2em;
+    height: 1em;
+    background: azure;
+    border: 0.1em solid black;
+    border-radius: 0.2em 0.2em 0.2em 0.2em;
     top: 0.25em;
 }
 .battery:before {
-    background: none repeat scroll 0 0 azure;
-    border: 0.1em solid black;
-    border-radius: 0 0.1em 0.1em 0;
     content: "";
-    display: block;
-    height: 0.4em;
-    left: 2em;
-    margin: 0 auto;
     position: absolute;
-    right: 0;
+    left: 2em;
     top: 0.2em;
     width: 0.15em;
+    height: 0.4em;
+    background: azure;
+    border: 0.1em solid black;
+    border-radius: 0 0.1em 0.1em 0;
 }
 .battery .power {
     position: absolute;
@@ -59,23 +56,18 @@
 
 /* Avatar (You) */
 
-.you {
-    width: 100%;
-    position: absolute;
-    bottom:0;
-}
-.you .face {
-    margin: 0.2em 0 0.1em 0.7em;
+.you .avatar .face {
     width: 1.6em;
     height: 1.6em;
     background: yellowgreen;
     border-radius: 0.8em;
+    margin: 0.2em 0 0.1em 0.7em;
 }
-.you .body {
-    margin-left: 10%;
+.you .avatar .body {
     width: 80%;
     height: 1em;
     background: yellowgreen;
+    margin-left: 10%;
 }
 
 
@@ -85,34 +77,31 @@
     position: absolute;
     top: 0.8em;
     left: 0.5em;
-    background-color: white;
-    border-radius: 0.1em 0.1em 0.1em 0.1em;
-    height: 1em;
     width: 1.6em;
-    text-align: center;
+    height: 1em;
+    background: white;
+    border-radius: 0.1em 0.1em 0.1em 0.1em;
 }
 .camera:before {
-    background: none repeat scroll 0 0 white;
-    border-radius: 0.1em 0.1em 0 0;
     content: "";
-    display: block;
-    height: 0.2em;
-    left: 0;
-    margin: 0 auto;
     position: absolute;
+    left: 0;
     right: 0;
     top: -0.2em;
     width: 1em;
+    height: 0.2em;
+    margin: 0 auto;
+    background: white;
     border-radius: 0.1em 0.1em 0 0;
 }
 .camera .lens{
-    background: white;
+    position: relative;
     top: -0.1em;
-    font-size: 1.25em;
     display: inline-block;
     width: 0.4em;
     height: 0.4em;
+    font-size: 1.25em;
+    background: white;
     border: 0.1em solid #23538a;
-    position: relative;
     border-radius: 0.35em;
 }
