--- a/style/header.css
+++ b/style/header.css
@@ -2,19 +2,19 @@
  * The header 
  */
 
-header {
+.container > header {
     width: 100%;
     text-align: left;
     color: white;
     font-size: 1em;
-    margin: 0;
+    margin: 1em 1em 0 1em;
     padding: 0;
 }
 
-header > * {
+.container > header > * {
 }
 
-header h1 {
+.container > header h1 {
     font-size: 1.5em;
     margin: 0;
     padding: 0;
